[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cocapn-protocol"
version = "0.1.0"
description = "Unified communication protocol for the Cocapn fleet — messages, envelopes, deadband routing, bottles"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []

[project.urls]
Repository = "https://github.com/SuperInstance/cocapn-protocol"

[tool.hatch.build.targets.wheel]
packages = ["src/cocapn_protocol"]
